--- a/app/Cliente.html
+++ b/app/Cliente.html
@@ -13,7 +13,7 @@
 <form class="form">
 
     <div class="form-group">
-        <label for="nome">Nome</label>
+        <label for="Cliente">Nome</label>
         <input type="text" min="1" step="1" id="nome" class="form-control" value="1" required/>
     </div>
 
